--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
             text: "Lab 0: dplyr Basics"
           - href: labs/lab_1/
             text: "Lab 1: Census Data Exploration"
+          - href: labs/lab_2/
+            text: "Lab 2: Spatial Analysis and Visualization"
 
 format:
   html:
